--- a/pom.xml
+++ b/pom.xml
@@ -2,23 +2,30 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
          http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>TaskFromDiffrentPlaces</groupId>
-  <artifactId>Tasks</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  
-  <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-	    
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-	
-  <dependencies>
-    <dependency>
-      <groupId>helpers</groupId>
-      <artifactId>MyUtils</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-    </dependency>
-   </dependencies> 
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>TaskFromDiffrentPlaces</groupId>
+    <artifactId>Tasks</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>helpers</groupId>
+            <artifactId>MyUtils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 </project>
